--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   flutter:
     sdk: flutter
   charts_flutter: ^0.12.0
+  shared_preferences: ^2.0.13
 
 
   # The following adds the Cupertino Icons font to your application.
