--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
     sdk: flutter
   charts_flutter: ^0.12.0
   shared_preferences: ^2.0.13
+  webview_flutter: ^3.0.2
 
 
   # The following adds the Cupertino Icons font to your application.
